--- a/_ci/additionals/TeamLabSvc.exe.Config
+++ b/_ci/additionals/TeamLabSvc.exe.Config
@@ -20,7 +20,7 @@
   <system.data>
     <DbProviderFactories>
       <clear />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="Devart.Data.MySql.MySqlProviderFactory, Devart.Data.MySql" />
       <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".Net Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
     </DbProviderFactories>
   </system.data>
