--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -97,6 +97,7 @@
   <package id="YamlDotNet" version="3.0.0" />
   <package id="Zlib.Portable" version="1.9.1.2" />
   <package id="Microsoft.SharePoint.Client.dll" version="15.0.4420.1017" />
+  <package id="StackExchange.Redis" version="9.9.9.0" />
   <package id="StackExchange.Redis.Extensions.Core" version="1.1.12" />
   <package id="RedisSessionProvider" version="9.9.9.0" />
 </packages>
