--- a/redistributable/StackExchange.Redis/StackExchange.Redis.csproj
+++ b/redistributable/StackExchange.Redis/StackExchange.Redis.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>StackExchange.Redis</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TrunkDir>..\..\</TrunkDir>
+    <BuildPackage>true</BuildPackage>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -60,7 +62,7 @@
     <OutputPath>bin\Mono\</OutputPath>
     <DefineConstants>TRACE;__MonoCS__</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>bin\Release\StackExchange.Redis.xml</DocumentationFile>
+    <DocumentationFile>bin\Mono\StackExchange.Redis.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -182,6 +184,7 @@
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(TrunkDir)\.nuget\NuGet.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
