upgrade version from 9.1.0 to 9.1.1

--- a/module/ASC.Mail.Aggregator/ASC.Mail.Aggregator.CollectionService/ASC.Mail.Aggregator.CollectionService.csproj
+++ b/module/ASC.Mail.Aggregator/ASC.Mail.Aggregator.CollectionService/ASC.Mail.Aggregator.CollectionService.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Program.Options.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue\Data\Extensions.cs" />
+    <Compile Include="Queue\Data\TaskData.cs" />
     <Compile Include="Queue\Data\TenantData.cs" />
     <Compile Include="Queue\Data\MailboxData.cs" />
     <Compile Include="Queue\QueueManager.cs" />
