--- a/web/studio/ASC.Web.Studio/Web.consumers.config
+++ b/web/studio/ASC.Web.Studio/Web.consumers.config
@@ -19,6 +19,10 @@
     <add name="facebookClientSecret" value="" consumer="Facebook" type="Secret" />
     <add name="facebookRedirectUrl" value="https://service.teamlab.com/oauth2.aspx" />
     <add name="facebookAccessToken_Default" value="" consumer="Facebook" type="KeyDefault" />
+    <add name="firebase_apiKey" value="" consumer="Firebase" type="Key" />
+    <add name="firebase_projectId" value="" consumer="Firebase" type="Secret" />
+    <add name="firebase_messagingSenderId" value="" consumer="Firebase" type="KeyDefault" />
+    <add name="firebase_authorization" value="" consumer="Firebase" type="SecretDefault" />
     <add name="googleClientId" value="" consumer="Google" type="Key" />
     <add name="googleClientSecret" value="" consumer="Google" type="Secret" />
     <add name="googleRedirectUrl" value="https://service.teamlab.com/oauth2.aspx" />
