--- a/web/studio/ASC.Web.Studio/web.appsettings.config
+++ b/web/studio/ASC.Web.Studio/web.appsettings.config
@@ -46,7 +46,7 @@
   <add key="web.client.cache.resetkey" value="20151020" />
   <add key="web.client.store" value="true" />
   <add key="web.controlpanel.url" value="" />
-  <add key="web.cultures" value="en-US,fr-FR,de-DE,es-ES,en-GB,ru-RU,lv-LV,pt-BR,pt-PT,it-IT,tr-TR,el-GR,zh-CN,pl-PL,cs-CZ,uk-UA,vi-VN,fi-FI,ko-KR,ja-JP" />
+  <add key="web.cultures" value="en-US,fr-FR,de-DE,es-ES,en-GB,ru-RU,lv-LV,pt-BR,pt-PT,it-IT,tr-TR,el-GR,zh-CN,pl-PL,cs-CZ,uk-UA,fi-FI,ko-KR,ja-JP,sk-SK" />
   <add key="web.custom-scripts" value="" />
   <add key="web.demo-order" value="http://www.onlyoffice.com/demo-order.aspx" />
   <add key="web.display.mobapps.banner" value="files" />
