--- a/module/ASC.Api/ASC.Specific/ASC.Specific.csproj
+++ b/module/ASC.Api/ASC.Specific/ASC.Specific.csproj
@@ -91,6 +91,10 @@
     <Compile Include="SerializationFilters\CustomSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\common\ASC.ActiveDirectory\ASC.ActiveDirectory.csproj">
+      <Project>{e588e818-f163-470c-802c-3a6e45b36080}</Project>
+      <Name>ASC.ActiveDirectory</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\common\ASC.Common\ASC.Common.csproj">
       <Project>{76de7717-3d4b-4a5b-b740-15b8913df0cb}</Project>
       <Name>ASC.Common</Name>
@@ -104,6 +108,10 @@
     <ProjectReference Include="..\..\..\common\ASC.IPSecurity\ASC.IPSecurity.csproj">
       <Project>{2FF2177F-2D1A-4396-84EB-51F14FD99385}</Project>
       <Name>ASC.IPSecurity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\common\ASC.SingleSignOn\ASC.SingleSignOn.csproj">
+      <Project>{ef3ae6b9-4503-42a3-88bc-c622e178a59e}</Project>
+      <Name>ASC.SingleSignOn</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\web\core\ASC.Web.Core\ASC.Web.Core.csproj">
       <Project>{02c40a64-fe22-41d0-9037-69f0d6f787a9}</Project>
