--- a/web/studio/ASC.Web.Studio/web.appsettings.config
+++ b/web/studio/ASC.Web.Studio/web.appsettings.config
@@ -72,6 +72,6 @@
   <add key="web.client.cache" value="true" />
   <add key="web.install-url" value="http://service.teamlab.com/install/email.ashx?v=8" />
   <add key="web.portal-name" value="" />
-  <add key="fullTextSearch" value="false" />
+  <add key="fullTextSearch" value="true" />
   <add key="mail.server-dns-check-prefix" value="portal-domain" />
 </appSettings>
