change link to Microsoft.WebApplication.targets

--- a/web/studio/ASC.Web.Studio/Products/CRM/ASC.Web.CRM.csproj
+++ b/web/studio/ASC.Web.Studio/Products/CRM/ASC.Web.CRM.csproj
@@ -1092,5 +1092,5 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="Exists('$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets')" />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets')" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
 </Project>
